added a fresh config file

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/go,visualstudiocode,windows
+
+# Ignore config for fresh
+runner.conf
